@@ -4,7 +4,7 @@ libILUT_la_SOURCES = ilut_allegro.c     ilut_main.c \
                      ilut_sdlsurface.c  ilut_states.c \
                      ilut_internal.c    ilut_opengl.c \
                      ilut_win32.c       ilut_directx.c \
-					 ilut_directx9.c
+					 ilut_directx9.c    ilut_x11.c
 
 AM_CFLAGS = @LIBILUT_CFLAGS@
 
@@ -13,7 +13,7 @@ libILUT_la_LDFLAGS = -no-undefined @VERSIONINFO@ \
                      $(top_builddir)/src-ILU/src/libILU.la \
                      @LIBSDL@ @LIBALLEGRO@ @LIBILUT_WIN32LIBPATH@
 
-libILUT_la_LIBADD = @LIBGL@ @LIBGDI32@
+libILUT_la_LIBADD = @LIBGL@ @LIBGDI32@ @LIBX11@
 
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src-ILUT/include \
            @HSDL@ @HALLEGRO@
